--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Marcelo",
   "license": "MIT",
   "scripts": {
-    "server": "live-server public",
-    "build": "webpack --mode=development",
+    "server": "live-server public/",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
     "test": "jest --config=jest.config.json"
   },
@@ -24,6 +25,7 @@
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.6.0",
     "live-server": "^1.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
@@ -41,7 +43,7 @@
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.8.0",
-    "webpack": "^4.22.0",
+    "webpack": "^4.25.1",
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
