--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Marcelo",
   "license": "MIT",
   "scripts": {
-    "server": "live-server public/",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
@@ -22,12 +21,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "enzyme-to-json": "^3.3.4",
     "express": "^4.16.4",
-    "jest": "^23.6.0",
-    "live-server": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
@@ -40,19 +34,23 @@
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.6.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.8.0",
-    "webpack": "^4.25.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "^4.25.1"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.6.0",
     "regenerator-runtime": "^0.12.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
